$Id$

version 1.6.2 ? (??/??/????):

  - fixed SQL query in Mailing with network filtering (alec)
  - BTS#0000407: fixed page number saving in netdevices list (alec/MadMark)
  - fixed payment day on Payment Info (alec)
  - BTS#0000413: fixed payments accounting on Payments List (endrju/alec)

version 1.6.1 Ishta (11/07/2005):

  - BTS#0000387: fixed problem with register_globals=on in accesstable.php
    (alec/chris)
  - lmsd: added -fPIC flag for x86-64 architecture (alec)
  - contrib/customer_otherip: fixed problem with non-numeric input data
    on login form (alec)
  - lms-payments: fixed problem with DBD execute() and binding not needed 
    variables (alec)
  - BTS#0000384: upgraded OverLIB to 4.17 - fixed tooltips positioning (alec)
  - critical bug: SESSION::remove() doesn't update session, so after restore
    session removed variable was still avaiable (lukasz)    
  - added ipaddr_pub support when filtering stats by network (alec)

version 1.6.0 Thor (13/06/2005):

  - BTS#0000370,376: changed default tax rate on Finances -> New Op. (alec)
  - lms-sendinvoices: fixed invoice number in mail subject and body (alec)
  - BTS#0000369: prepared statements for proper strings quoting (alec)
  - added sample/rc.lmsd script (alec)
  - lmsd: fixed problem with long (above 60 sec.) reload (alec)
  - lmsd/pinger: using more glibc instead of kernel headers because of 
    compilation errors on some linux distributions (e.g. PLD) (alec)
  - updated contrib/multiip-patch (siradams)

version 1.6.0rc6 Thor (07/06/2005):

  - lms-payments: again tariff value can be less than zero (alec)
  - fixed customer name capitalization on contract (alec)
  - contrib/formularz_przelewu_wplaty_2: fixed problem with locale (alec)
  - BTS#0000375: removed errors when trying to print invoices by selecting
    on balance list operations that haven't got invoices (alec)

version 1.6.0rc5 Thor (01/06/2005):

  - updated lib/ethercodes.txt file (alec)